welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: not found: type array
def colonneSuivante(t:array,n:int){
                      ^Array1:18: error: not found: type int
def colonneSuivante(t:array,n:int){
                              ^